--- a/xFunc.Maths/Resources/Resource.resx
+++ b/xFunc.Maths/Resources/Resource.resx
@@ -177,4 +177,10 @@
   <data name="ParameterTypeMismatchExceptionError" xml:space="preserve">
     <value>Parameter type mismatch. (Expected: {0}; Actual: {1})</value>
   </data>
+  <data name="InvalidInFirst" xml:space="preserve">
+    <value>No item satisfied the predicate or the source collection was empty.</value>
+  </data>
+  <data name="NoElementInSource" xml:space="preserve">
+    <value>No elements in source list.</value>
+  </data>
 </root>
