--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -765,4 +765,7 @@
   <data name="DocumentationTextBox" xml:space="preserve">
     <value>Документація:</value>
   </data>
+  <data name="SettingsSaveDump" xml:space="preserve">
+    <value>Зберегти дамп-файл після помилки в програмі.</value>
+  </data>
 </root>
