--- a/xFunc.Maths/Resources/Resource.ru.resx
+++ b/xFunc.Maths/Resources/Resource.ru.resx
@@ -175,7 +175,7 @@
     <value>Переменная '{0}' не найдена.</value>
   </data>
   <data name="ParameterTypeMismatchExceptionError" xml:space="preserve">
-    <value>Несоответствующий тип параметра. (Ожидается: {0}; Фактически: {1})</value>
+    <value>Несоответствующий тип параметра (Ожидается: {0}; Фактически: {1}).</value>
   </data>
   <data name="InvalidInFirst" xml:space="preserve">
     <value>Ни один элемент не удовлетворяет условию предиката или исходная последовательность пуста.</value>
