--- a/xFunc.Maths/Resources/Resource.resx
+++ b/xFunc.Maths/Resources/Resource.resx
@@ -175,7 +175,7 @@
     <value>The '{0}' variable not found.</value>
   </data>
   <data name="ParameterTypeMismatchExceptionError" xml:space="preserve">
-    <value>Parameter type mismatch. (Expected: {0}; Actual: {1})</value>
+    <value>Parameter type mismatch (Expected: {0}; Actual: {1}).</value>
   </data>
   <data name="InvalidInFirst" xml:space="preserve">
     <value>No item satisfied the predicate or the source collection was empty.</value>
