--- a/xFunc/Resources/Resource.resx
+++ b/xFunc/Resources/Resource.resx
@@ -768,4 +768,7 @@
   <data name="SettingsSaveDump" xml:space="preserve">
     <value>Save the dump file after crash.</value>
   </data>
+  <data name="SettingsDefaultChartColor" xml:space="preserve">
+    <value>Default chart color:</value>
+  </data>
 </root>
