--- a/xFunc/Resources/Resource.ru.resx
+++ b/xFunc/Resources/Resource.ru.resx
@@ -783,4 +783,7 @@
   <data name="ReToolTip" xml:space="preserve">
     <value>Возвращает вещественную часть комплексного числа. Пример: re(3+2i).</value>
   </data>
+  <data name="ModuleToolTip" xml:space="preserve">
+    <value>Остаток от деления. Пример: 7 % 2, 7 mod 2.</value>
+  </data>
 </root>
