--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -783,4 +783,7 @@
   <data name="ReToolTip" xml:space="preserve">
     <value>Повертає дійсну частину комплексного числа. Приклад: re(3+2i).</value>
   </data>
+  <data name="ModuleToolTip" xml:space="preserve">
+    <value>Залишок від ділення. Приклад: 7 % 2, 7 mod 2.</value>
+  </data>
 </root>
