--- a/xFunc/Resources/Resource.resx
+++ b/xFunc/Resources/Resource.resx
@@ -786,4 +786,16 @@
   <data name="ModuleToolTip" xml:space="preserve">
     <value>The modulo operator. Example: 7 % 2, 7 mod 2.</value>
   </data>
+  <data name="AvgToolTip" xml:space="preserve">
+    <value>The Avg function. Example: avg(1, 2, 3).</value>
+  </data>
+  <data name="MaxToolTip" xml:space="preserve">
+    <value>The Max function. Example: max(1, 2, 3).</value>
+  </data>
+  <data name="MinToolTip" xml:space="preserve">
+    <value>The Min function. Example: min(1, 2, 3).</value>
+  </data>
+  <data name="StatisticalExpanderHeader" xml:space="preserve">
+    <value>Statistical</value>
+  </data>
 </root>
