--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -786,4 +786,16 @@
   <data name="ModuleToolTip" xml:space="preserve">
     <value>Залишок від ділення. Приклад: 7 % 2, 7 mod 2.</value>
   </data>
+  <data name="AvgToolTip" xml:space="preserve">
+    <value>Середнє арифметичне. Приклад: avg(1, 2, 3).</value>
+  </data>
+  <data name="MaxToolTip" xml:space="preserve">
+    <value>Максимум. Приклад: max(1, 2, 3).</value>
+  </data>
+  <data name="MinToolTip" xml:space="preserve">
+    <value>Мінімум. Приклад: min(1, 2, 3).</value>
+  </data>
+  <data name="StatisticalExpanderHeader" xml:space="preserve">
+    <value>Статистичні</value>
+  </data>
 </root>
