--- a/xFunc/Resources/Resource.resx
+++ b/xFunc/Resources/Resource.resx
@@ -798,4 +798,7 @@
   <data name="StatisticalExpanderHeader" xml:space="preserve">
     <value>Statistical</value>
   </data>
+  <data name="CountToolTip" xml:space="preserve">
+    <value>The Count function. Example: count(1, 2, 3).</value>
+  </data>
 </root>
