--- a/xFunc.Maths/Resources/Resource.resx
+++ b/xFunc.Maths/Resources/Resource.resx
@@ -177,4 +177,7 @@
   <data name="FormatException" xml:space="preserve">
     <value>The string '{0}' has an invalid format.</value>
   </data>
+  <data name="NotEnoughParams" xml:space="preserve">
+    <value>Not enough parameters.</value>
+  </data>
 </root>
