--- a/xFunc.Maths/Resources/Resource.ru.resx
+++ b/xFunc.Maths/Resources/Resource.ru.resx
@@ -180,4 +180,7 @@
   <data name="NotEnoughParams" xml:space="preserve">
     <value>Недостаточно параметров.</value>
   </data>
+  <data name="VectorCrossException" xml:space="preserve">
+    <value>Размер вектора должен быть равер 3.</value>
+  </data>
 </root>
