--- a/xFunc.Maths/Resources/Resource.resx
+++ b/xFunc.Maths/Resources/Resource.resx
@@ -183,4 +183,7 @@
   <data name="VectorCrossException" xml:space="preserve">
     <value>The size of vector should equal to 3.</value>
   </data>
+  <data name="DifferentParameterTypeMismatchExceptionError" xml:space="preserve">
+    <value>The parameter #{2} has wrong type (Expected: {0}; Actual: {1}).</value>
+  </data>
 </root>
