--- a/xFunc.Maths/Resources/Resource.resx
+++ b/xFunc.Maths/Resources/Resource.resx
@@ -186,4 +186,10 @@
   <data name="DifferentParameterTypeMismatchExceptionError" xml:space="preserve">
     <value>The parameter #{2} has wrong type (Expected: {0}; Actual: {1}).</value>
   </data>
+  <data name="LeftParameterTypeMismatchExceptionError" xml:space="preserve">
+    <value>The left parameter has wrong type (Expected: {0}; Actual: {1}).</value>
+  </data>
+  <data name="RightParameterTypeMismatchExceptionError" xml:space="preserve">
+    <value>The right parameter has wrong type (Expected: {0}; Actual: {1}).</value>
+  </data>
 </root>
